<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confidence_score">confidence score</string>
    <string name="timestamp">Time Stamp</string>
    <string name="article">Article</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="simpan_hasil">Simpan Hasil</string>
    <string name="analisa_tersimpan">Hasil Analisis Berhasil Disimpan</string>
    <string name="predicted_label">Predicted Label</string>
    <string name="ArticleTitle">Judul Artikel</string>
    <string name="ArticleAuthor">Penulis</string>
    <string name="ArticleDescription">Deskripsi Artikel</string>
</resources>