<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_navigation"
    app:startDestination="@id/analyzeFragment">

    <fragment
        android:id="@+id/analyzeFragment"
        android:name="com.dicoding.asclepius.ui.analyze.AnalyzeFragment"
        android:label="@string/analyze"
        tools:layout="@layout/fragment_analyze">
        <action
            android:id="@+id/action_analyzeFragment_to_resultFragment"
            app:destination="@id/resultFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigationArticle"
        android:name="com.dicoding.asclepius.ui.article.ArticleFragment"
        android:label="@string/article"
        tools:layout="@layout/fragment_article" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.dicoding.asclepius.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.dicoding.asclepius.ui.result.ResultFragment"
        android:label="ResultFragment"
        tools:layout="@layout/fragment_result">
        <argument
            android:name="result_label"
            app:argType="string" />
        <argument
            android:name="result_confidence"
            app:argType="string" />
        <argument
            android:name="image_uri"
            app:argType="string" />
    </fragment>
</navigation>