<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    android:layout_gravity="center"
    app:contentPadding="20dp"
    app:cardBackgroundColor="@color/white"
    xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/articleImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="14dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/articleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginVertical="10dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                tools:text="@string/ArticleTitle" />

            <TextView
                android:id="@+id/articleAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textSize="10sp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:text="@string/ArticleAuthor" />
            <TextView
                android:id="@+id/articleDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="13sp"
                android:textColor="@color/black"
                tools:text="@string/ArticleDescription" />

        </LinearLayout>
</com.google.android.material.card.MaterialCardView>
